# enough

./: .ansible-lint  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .yamllint  AUTHORS  CONTRIBUTING.md  ChangeLog  MANIFEST.in  Makefile  README.md  README.txt  ansible.cfg  backup-on-bind-playbook.yml  bootstrap  clouds.yml  clouds.yml.example  conftest.py  enough-community-playbook.yml  hosts-base.yml  openstack.py  playbook.yml  private-key.yml  private-key.yml.example  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  secrets.yml.example  securedrop-club-playbook.yml  setup.cfg  tox.ini  vm.yml
certs/: 0a3654cf.0  5a7a72df.0
cookiecutter/: cookiecutter.json
cookiecutter/hooks/: post_gen_project.sh
cookiecutter/{{cookiecutter.scenario_name}}/: molecule.yml  playbook.yml  {{cookiecutter.scenario_name}}-playbook.yml
docs/: DNS.rst  ansible.rst  authorized_keys.rst  backup.rst  bind.rst  cli.rst  cloud.rst  conf.py  contribute.rst  demo.rst  documentation.rst  enough.rst  extending.rst  funding.rst  gitlab.rst  hosting.rst  ids.rst  index.rst  infrastructure.rst  mattermost.rst  monitoring.rst  monitoring_architecture.rst  monitoring_howto.rst  postfix.rst  team.rst  weblate.rst
enough/: cmd.py  configuration.py  settings.py  urls.py  version.py  views.py  wsgi.py
enough/api/: permissions.py  views.py
enough/auth/: __init__.py  apps.py
enough/cli/: create.py  manage.py
enough/common/: ansible_utils.py  bind.py  docker.py  gitlab.py  host.py  hosting.py  openstack.py  retry.py  sh_utils.py  tcp.py
enough/internal/: cmd.py
group_vars/all/: clouds.yml  infrastructure.yml  secrets.yml
host_vars/icinga-host/: monitoring.yml
host_vars/weblate-host/: weblate.yml
inventories/common/: 02-all.yml  all.yml  firewall.yml
inventories/dachary/: firewall.yml  hosts.yml
inventories/fpoulain-dachary/: firewall.yml  hosts.yml
inventory/: 02-all.yml
molecule/ansible/: molecule.yml  playbook.yml
molecule/api/: api-playbook.yml  molecule.yml  playbook.yml
molecule/authorized_keys/: authorized-keys-playbook.yml  molecule.yml  playbook.yml
molecule/backup/: molecule.yml  playbook.yml
molecule/bind/: bind-client-playbook.yml  bind-firewall-playbook.yml  bind-monitoring-playbook.yml  bind-playbook.yml  molecule.yml  playbook.yml  test-bind-client-playbook.yml
molecule/bots/: bots-playbook.yml  molecule.yml  playbook.yml  sd-helper-playbook.yml
molecule/certbot/: molecule.yml  playbook.yml  test-certbot-playbook.yml
molecule/certificate/: molecule.yml  playbook.yml  test-certificate-playbook.yml
molecule/certs/: 2018-12-cleanup.yml  certs-playbook.yml  molecule.yml  playbook.yml  test-certs-playbook.yml
molecule/chat/: chat-playbook.yml  molecule.yml  playbook.yml
molecule/cloud/: cloud-playbook.yml  molecule.yml  playbook.yml  wereport-playbook.yml
molecule/demo/: demo-playbook.yml  molecule.yml  playbook.yml
molecule/enough/: enough-playbook.yml  molecule.yml  playbook.yml
molecule/enough-nginx/: molecule.yml  playbook.yml  test-enough-nginx-playbook.yml
molecule/firewall/: destroy.yml  firewall-playbook.yml  molecule.yml  playbook.yml
molecule/forum/: forum-playbook.yml  molecule.yml  playbook.yml
molecule/gitlab/: gitlab-ci-playbook.yml  gitlab-playbook.yml  mirror-playbook.yml  molecule.yml  playbook.yml  test-real-gitlab-playbook.yml
molecule/icinga/: icinga-firewall-playbook.yml  icinga-playbook.yml  molecule.yml  monitor-external-ressources-playbook.yml  (+5 more)
tests/: conftest.py  icinga_helper.py  infrastructure.py  run-tests.sh  test_retry.py  tox.dockerfile
(+513 files in other folders)
