[metadata]
name = enough
author = Enough Community
version = 1.0.0
release =
author-email = contact@enough.community
summary = Helping journalists and human rights defefenders to communicate securely and privately
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://lab.enough.community/main/infrastructure
project_urls =
    Bug Tracker = https://lab.enough.community/main/infrastructure/issues
    Documentation = https://enough-community.readthedocs.io/
    Source Code = https://lab.enough.community/main/infrastructure
license = AGPLv3+
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    enough

[entry_points]
console_scripts =
    enough = enough.cmd:main

enough.cli =
    create = enough.cli.create:Create

enough.internal.cli =
    build_enough_image = enough.internal.cli.docker:Build
    install = enough.internal.cli.install:InstallScript

[build_sphinx]
all-files = 1
warning-is-error = 1
build-dir = build
source-dir = docs
