[metadata]
#
# This value must be in enough.egg-info/PKG-INFO but it may not be for
# reasons that are difficult to predict. For instance, removing the
# long-description-content-type field will revert to metadata-version 1.1
# Note that we do **not** want metadata-version 1.1 because pypi will not
# display the URLs in the sidebar when reading a package at that version.
#
metadata-version = 2.1
name = enough
author = Enough Community
version = 1.0.4
release =
author-email = contact@enough.community
description = Helping journalists and human rights defefenders to communicate securely and privately
long-description-file = README.md
long-description-content-type = text/markdown; charset=UTF-8
home-page = https://lab.enough.community/main/infrastructure
project-urls =
    Bug Tracker = https://lab.enough.community/main/infrastructure/issues
    Documentation = https://enough-community.readthedocs.io/
    Source Code = https://lab.enough.community/main/infrastructure
license = AGPLv3+
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    enough

data_files =
    share/enough =
	ansible.cfg
	playbook.yml
    share/enough/molecule = molecule/*
    share/enough/inventory = inventory/*

[entry_points]
console_scripts =
    enough = enough.cmd:main

enough.cli =
    create = enough.cli.create:Create
    manage = enough.cli.manage:Manage

enough.internal.cli =
    build_image = enough.internal.cli.docker:Build
    create_service = enough.internal.cli.docker:Create
    install = enough.internal.cli.install:InstallScript
    host_create = enough.internal.cli.host:Create
    host_delete = enough.internal.cli.host:Delete
    host_inventory = enough.internal.cli.host:Inventory

[build_sphinx]
all-files = 1
warning-is-error = 1
build-dir = build
source-dir = docs
